--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,22 +5,48 @@
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
 	
+	<link href="css/bootstrap.css" rel="stylesheet" />
+	<link href="css/bootstrap-theme.css" rel="stylesheet" />
+	<link href="css/hci-friends.css" rel="stylesheet" />
 </head>
 
-<body>
-	<h1>My HCI Friends</h1>
+<div class="container">
+	<body>
+		<h1>My HCI Friends</h1>
 
-	<form id="addFriendForm" role="form" method="get" action="/add">
-		<h3>Add a friend</h3>
-	    <div class="form-group">
-	      <label for="name">Name:</label>
-	      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
-	    </div>
-	    <div class="form-group">
-	      <label for="description">Description:</label>
-	      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
-	    </div>
-	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
-	</form>
-</body>
+		<div class="friends">
+			{{#each friends}}
+				<div class ="friend" class="img-responsive">
+					<img src="{{imageURL}}" .../>
+					<h3 class="name"> {{name}} </h3>
+					<p class="description"> {{description}} </p>
+				</div>
+			{{/each}}
+		</div>
+
+		<div>
+			<img src="http://lorempixel.com/500/500/people">
+			<h3>Fake Friend</h3>
+			<p>All my friends are imaginary</p>
+		</div>
+
+		<form id="addFriendForm" role="form" method="get" action="/add">
+			<h3>Add a friend</h3>
+		    <div class="form-group">
+		      <label for="name">Name:</label>
+		      <input type="text" class="form-control" id="name" placeholder="Name" name="name">
+		    </div>
+		    <div class="form-group">
+		      <label for="description">Description:</label>
+		      <input type="text" class="form-control" id="description" placeholder="Description" name="description">
+		    </div>
+		    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
+		</form>
+
+		<script src="js/jquery-1.11.0.js"></script>
+		<script src="js/hci-friends.js"></script>
+		<script src="js/bootstrap.js"></script>
+		
+	</body>
+</div>
 </html>
